# fluxui

./: .gitignore  CMakeLists.txt  build_bindings.ps1  build_optimized.bat  fluxui_config.h  start.ps1  vcpkg.json  vulkan_rounded_fragment.spv  vulkan_rounded_vertex.spv  vulkan_text_fragment.spv  vulkan_text_vertex.spv
.zig-cache-global/b/4312842d7f8d1930188c6077c795062e/: builtin.zig
.zig-cache-global/b/ad24b8f701d51ef736e775dc3955409a/: builtin.zig
.zig-cache-global/b/e3c84d054e231afff8b733d0e2365813/: builtin.zig
.zig-cache-global/o/a52f348ce451207301295cb091f13549/: compiler_rt.lib
.zig-cache-local/o/09da5087e8a1f75019511ed5c9e4f4bc/: cimport.zig
.zig-cache-local/o/51482df00b2874fa7b257e800cf5f034/: cimport.zig
.zig-cache-local/o/71ccaa193db1794e576dbb668607f64c/: cimport.h  cimport.h.d
.zig-cache-local/o/788a53aaa4bf965a576904686a01ef11/: cimport.zig
.zig-cache-local/o/7dcdee9a80b714edd17c2fd9f609747b/: cimport.zig
.zig-cache-local/o/82519d238cb393aa0db7b35936127ba9/: cimport.zig
.zig-cache-local/o/ccb3346e4b44a8c8087f0073ac35e2a2/: cimport.zig
.zig-cache-local/o/efb71656f4a67ae05df4b0da905524b0/: cimport.h.d
assets/styles/: theme.css
bindings/go/: dsl.go  dsl_test.go  fluxui.go
bindings/java/io/fluxui/: ActionCallback.java  App.java  Backend.java  Dsl.java  FluxUI.java  Keys.java  Modifiers.java  Native.java  Node.java  Query.java  RouteBuilder.java  Rule.java  Schema.java  ScrollStrategy.java  State.java  Store.java  UpdateCallback.java  VirtualListItemBuilder.java  Widget.java
bindings/java/native/: fluxui_jni.cpp
bindings/python/: fluxui.py
bindings/rust/: lib.rs
bindings/zig/: fluxui.zig
cmake/: AutoRoutes.cmake
docs/: ARCHITECTURE.md  backends.md  css_blink_comparison.md  ffi.md  performance.md
examples/c/: minimal.c
examples/cpp/: accessibility_tree_test.cpp  bench_style_copy.cpp  benchmark_frame.cpp  benchmark_tree.cpp  blink_features_test.cpp  demo_dsl.cpp  demo_ecosystem.cpp  demo_gpu_modes.cpp  demo_hotreload.cpp  gpu_composited_layer_test.cpp  minimal.cpp  paint_invalidation_test.cpp  quick_minimal.cpp  svg_test.cpp  table_test.cpp  test_animations.cpp  test_at_rules.cpp  test_cascade.cpp  test_color.cpp  test_counters.cpp  test_disabled.cpp  test_dsl.cpp  test_dynamic.cpp  test_filter.cpp  test_font_weight.cpp  test_gradient_sample.cpp  test_gradients.cpp  test_has_forms.cpp  test_inheritance.cpp  test_input_change.cpp  test_location_pseudo.cpp  test_logical.cpp  test_masking.cpp  test_media_queries.cpp  test_nesting.cpp  test_nth_of.cpp  test_pseudo.cpp  test_range_pseudo.cpp  test_scroll.cpp  test_scroll_timeline.cpp  (+9 more)
examples/dataleakguard/: components.h  layout.h  main.cpp  state.h
examples/dataleakguard/views/: alerts.h  blink.h  dashboard.h  reports.h  rules.h  scanner.h  settings.h
examples/game_2d/: main.cpp
examples/game_3d/: main.cpp
examples/go/: dsl.go  ecosystem.go  minimal.go
examples/go/views/: dashboard.go  main.go  settings.go
examples/java/: ActionSmoke.java  AutoClose.java  DslDemo.java  Ecosystem.java  Minimal.java  RouterDemo.java  Smoke.java  TestDsl.java
examples/java/views/: Views.java
examples/python/: dsl.py  ecosystem.py  minimal.py  minimal_unstyled.py  router_demo.py  test_dsl.py
examples/python/views/: dashboard.py  settings.py
examples/rust/: compliance_generator.rs  dsl.rs  ecosystem.rs  minimal.rs  router_demo.rs
examples/rust/views/: dashboard.rs  settings.rs
examples/zig/: dsl.zig  ecosystem.zig  fluxui.zig  minimal.zig  router_demo.zig
examples/zig/views/: dashboard.zig  settings.zig
fluxui/include/fluxui/: FluxUI.h  accessibility.h  compositor.h  config.h  core.h  css_parser.h  dsl.h  fluxui_c.h  layout.h  layout_object.h  paint_record.h  platform.h  property_trees.h  renderer.h  widgets.h
fluxui/include/fluxui/detail/: application.h  css_enums.h  css_value.h  dsl_app.h  dsl_ecosystem.h  events.h  style.h  transform.h  widget_base.h  widget_elements.h
fluxui/include/fluxui/detail/core/: css_enums.h  css_value.h  data_ref.h  events.h  geometry.h  style.h  transform.h
fluxui/include/fluxui/detail/dsl/: dsl_app.h  dsl_core.h  dsl_ecosystem.h
fluxui/include/fluxui/detail/widgets/: application.h  widget_base.h  widget_elements.h  widget_factory.h
fluxui/src/: accessibility.cpp  compositor.cpp  css_parser.cpp  fluxui_c.cpp  grid_engine.inl  layout.cpp  layout_object.cpp  platform_android.cpp  platform_linux.cpp  platform_macos.mm  platform_win32.cpp  renderer.cpp  vulkan_shaders.h  widgets.cpp
fluxui/src/core/: application.cpp  gc.cpp  widget_cascade.cpp  widget_internal.h  widget_paint.cpp  widget_prepaint.cpp  widget_style.cpp
fluxui/src/core/widgets/: controls.cpp  interactive.cpp  media.cpp  svg.cpp  text.cpp  textarea.cpp  video.cpp
fluxui/src/layout/: layout.cpp  layout_object.cpp
fluxui/src/platform/: platform_linux.cpp  platform_win32.cpp
fluxui/src/render/: image_resource.cpp  renderer.cpp  renderer_effects.cpp  renderer_svg.cpp  renderer_svg.h  renderer_svg_internal.h  renderer_text.cpp  renderer_vulkan.cpp  renderer_vulkan.h  software_internal.h  software_raster.cpp  vulkan_pipeline_cache.h  vulkan_shaders.h
fluxui/src/style/: css_color.cpp  css_internal.h  css_interpolate.cpp  css_media_query.cpp  css_merge.cpp  css_parser.cpp  css_parser.cpp.bak  css_transform_parser.cpp  css_ua_sheet.cpp  css_value_parser.cpp
scratch/: find_resolve.py  find_textinput.py
src/: main.cpp
tools/: font_atlas_generator.cpp  font_baker.cpp  gen_routes.py
